Add discontinuous loop support to AIC finder